[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/ubuntu.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/ActorEditor/actorEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/VNScriptEditor/editorFontTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.25098, 0.243137, 0.243137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.682353, 0.717647, 0.858824, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="editor" type="PanelContainer"]
margin_right = 500.0
margin_bottom = 520.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="editOptions" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 496.0
margin_bottom = 516.0
theme = ExtResource( 3 )
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="editOptions"]
margin_right = 492.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 1 )
text = "
Find and save your sprite to scene for further edits.

"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="VBoxContainer" parent="editOptions"]
margin_top = 195.0
margin_right = 492.0
margin_bottom = 318.0
theme = ExtResource( 3 )

[node name="enterUID" type="Label" parent="editOptions/main"]
margin_right = 492.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Enter UID:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="editOptions/main"]
margin_top = 37.0
margin_right = 492.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="editOptions/main"]
margin_top = 84.0
margin_right = 492.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 1 )
text = "Find"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="assetInfo" type="HBoxContainer" parent="editOptions"]
margin_top = 336.0
margin_right = 492.0
margin_bottom = 412.0
custom_constants/separation = 20

[node name="dummySpace" type="Control" parent="editOptions/assetInfo"]
margin_bottom = 76.0

[node name="spriteInfo" type="VBoxContainer" parent="editOptions/assetInfo"]
margin_left = 20.0
margin_right = 239.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="spriteName" type="Label" parent="editOptions/assetInfo/spriteInfo"]
margin_right = 219.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Available Sprites:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spriteOptions" type="OptionButton" parent="editOptions/assetInfo/spriteInfo"]
margin_top = 37.0
margin_right = 219.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animInfo" type="VBoxContainer" parent="editOptions/assetInfo"]
margin_left = 266.0
margin_right = 475.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="animName" type="Label" parent="editOptions/assetInfo/animInfo"]
margin_right = 209.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Available Anims:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animOptions" type="OptionButton" parent="editOptions/assetInfo/animInfo"]
margin_top = 37.0
margin_right = 209.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generateButton" type="Button" parent="editOptions"]
margin_top = 430.0
margin_right = 492.0
margin_bottom = 469.0
custom_fonts/font = ExtResource( 1 )
text = "Save Sprite to Scene (.tscn)"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charaGenPopup" type="AcceptDialog" parent="."]
margin_right = 746.0
margin_bottom = 396.0
theme = ExtResource( 3 )
window_title = ""
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="editOptions/main/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="editOptions/generateButton" to="." method="_on_generateButton_pressed"]
[connection signal="confirmed" from="charaGenPopup" to="." method="_on_charaGenPopup_confirmed"]
